fix: 稳定螺旋道路几何与净空重建